objects/Case.object
<CustomObject><businessProcesses>
        <fullName>CASA Case</fullName>
        <description>Typical CASA Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>EAP</fullName>
        <description>Early Alert Progress Report</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>LWC Case</fullName>
        <description>Typical LWC Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Academic_Counseling_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Counseling/Coaching</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Academic_Form_Processing__c</fullName>
        <inlineHelpText>Multiple reasons can be chosen</inlineHelpText>
        <label>Academic Form Processing</label>
        <picklist>
            <picklistValues>
                <fullName>Add/Drop Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPT/CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Verification</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Academic_Foundation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Foundation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Advising_Notes__c</fullName>
        <label>Advising Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Appeal_Status__c</fullName>
        <label>Appeal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Did Not Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Areas_for_improvement__c</fullName>
        <description>This field holds the areas for improvement values in Reasons Section on EAP Report Form page.</description>
        <label>Areas for Improvement</label>
        <picklist>
            <picklistValues>
                <fullName>Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Grades</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>AssetId</fullName>
        
        <type>Lookup</type>
    </fields><fields>
        <fullName>Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Available_Date__c</fullName>
        <label>Available on or after</label>
        <type>Date</type>
    </fields><fields>
        <fullName>CWID__c</fullName>
        <formula>Contact.CWID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CWID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Consider_Withdrawing_from_Course__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Withdrawing from Course</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ContactFirstName__c</fullName>
        <formula>Contact.FirstName</formula>
        <label>ContactFirstName</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ContactId</fullName>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Student__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        
        <type>Lookup</type>
    </fields><fields>
        <fullName>ContactLastName__c</fullName>
        <formula>Contact.LastName</formula>
        <label>ContactLastName</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CourseName__c</fullName>
        <formula>Course_Offering__r.hed__Course__r.Name</formula>
        <label>Course Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Connection</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Course_Enrollment__c.hed__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.ContactId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Course_Section__c</fullName>
        <formula>Course_Offering__r.hed__Section_ID__c</formula>
        <label>Course Section</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course__c</fullName>
        <formula>Course_Connection__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course</label>
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Description</fullName>
        
    </fields><fields>
        <fullName>Estimated_Grade__c</fullName>
        <label>Estimated Grade</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Faculty_Email__c</fullName>
        <inlineHelpText>Enter faculty member's email</inlineHelpText>
        <label>Faculty Email</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Faculty_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if student was referred by faculty</inlineHelpText>
        <label>Faculty Referral</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Faculty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>EAP Faculty Referrer</description>
        <label>Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Faculty)</relationshipLabel>
        <relationshipName>Cases_Faculty</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Friday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Friday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Friday from</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>LWC_Tutor__c</fullName>
        <formula>Course_Offering__r.LWC_Tutor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LWC Tutor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Lack_of_Motivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lack of Motivation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Late_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Work</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Monday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Monday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Monday from</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Number_of_Calls__c</fullName>
        <inlineHelpText>Enter number of times student has been called</inlineHelpText>
        <label>Number of Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Origin</fullName>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit - Drop in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit - Scheduled Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebTrack</fullName>
            </picklistValues>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>OwnerId</fullName>
        
        <type>Lookup</type>
    </fields><fields>
        <fullName>Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Personal_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Issues</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Poor_Study_Skills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Poor Study Skills</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Poor_Time_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Poor Time Management</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Preparation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preparation</label>
        <type>Checkbox</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Priority</fullName>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields>
        <fullName>Quality_of_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality of Work</label>
        <type>Checkbox</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Reason</fullName>
        <picklist>
            <picklistValues>
                <fullName>Academic Coaching</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Disqualification</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Form Processing</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Probation</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Information</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>CMBIT</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Dean's Letter / Tuition Adjustment</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Related Issues</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Disruptive Behavior</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Early Alert</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/Student Complaint</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty Notification</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Needs</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Appeal / Grade Change</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Homesickness</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Housing / Residence Hall</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Leave of Absence/Withdrawal from USF</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Loss / Grief</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Major / Minor Exploration</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Health</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>New Student Survey</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Assistance</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>SOM Waitlist</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Study Abroad</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
            <picklistValues>
                <fullName>Underenrolled</fullName>
                <cssExposed>false</cssExposed>
            </picklistValues>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields>
        <fullName>Reason_Tutor_Request__c</fullName>
        <label>Reason Tutor Request</label>
        <picklist>
            <picklistValues>
                <fullName>This course was not listed on my course list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There are no available appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No available appointments fit my schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Recommendations__c</fullName>
        <description>This field holds the 'recommendation' values of Reasons Section on EAP Report Form page.</description>
        <label>Recommendations</label>
        <picklist>
            <picklistValues>
                <fullName>See Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental Instruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Counseling/Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Disability Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Study Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writing Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider Withdrawing from Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See CASA Staff</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Recommended_Classes__c</fullName>
        <inlineHelpText>Classes Recommended to student by advisor</inlineHelpText>
        <label>Recommended Classes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Referred_By_Email__c</fullName>
        <label>Referred By Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Saturday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Saturday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Saturday from</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>See_CASA_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>See CASA Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>See_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>See Instructor</label>
        <type>Checkbox</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Status</fullName>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
                <closed>false</closed>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <closed>false</closed>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
                <closed>true</closed>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
                <closed>true</closed>
            </picklistValues>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Disability_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Disability Services</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Study_Skills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Study Skills</label>
        <type>Checkbox</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Subject</fullName>
        
    </fields><fields>
        <fullName>Sunday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sunday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Sunday from</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Supplemental_Instruction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental Instruction</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Test_Grades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Grades</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Thursday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Thursday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Thursday from</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Tuesday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Tuesday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Tuesday From</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Tutoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tutoring</label>
        <type>Checkbox</type>
    </fields><fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Type</fullName>
        <picklist>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
        </picklist>
        
        <type>Picklist</type>
    </fields><fields>
        <fullName>Wednesday_End__c</fullName>
        <globalPicklist>Available_End_Time</globalPicklist>
        <label>to</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Wednesday_Start__c</fullName>
        <globalPicklist>Available_Start_Time</globalPicklist>
        <label>Wednesday from</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Work__c</fullName>
        <description>This field holds the 'Work' values of Reasons Section on EAP Report Form page.</description>
        <label>Work</label>
        <picklist>
            <picklistValues>
                <fullName>Quality of work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Study Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Management Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Motivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performing below a "C"</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Writing_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Writing Center</label>
        <type>Checkbox</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews><listViews>
        <fullName>Early_Alerts</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Areas_for_improvement__c</columns>
        <columns>Work__c</columns>
        <columns>Recommendations__c</columns>
        <columns>Estimated_Grade__c</columns>
        <columns>Referred_By__c</columns>
        <columns>Course_Offering__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Faculty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.EAP_Report</value>
        </filters>
        <label>Early Alerts</label>
        <sharedTo>
            <role>CASA_Staff</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews><listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews><listViews>
        <fullName>My_Case_Team</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <filterScope>Team</filterScope>
        <label>My Case Team</label>
    </listViews><listViews>
        <fullName>Tutor_Request</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Tutor_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Tutor Request (Open)</label>
        <sharedTo>
            <role>LWC_Admin</role>
            <role>LWC_Front_Desk</role>
            <role>LWC_Learning_Lead</role>
        </sharedTo>
    </listViews><listViews>
        <fullName>Tutor_Request_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Tutor_Request</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tutor Request (Closed)</label>
        <sharedTo>
            <role>LWC_Admin</role>
            <role>LWC_Front_Desk</role>
            <role>LWC_Learning_Lead</role>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>CASA_Case</fullName>
        <active>true</active>
        <businessProcess>EAP</businessProcess>
        <label>CASA Case</label>
    </recordTypes><recordTypes>
        <fullName>EAP_Report</fullName>
        <active>true</active>
        <businessProcess>EAP</businessProcess>
        <label>EAP Report</label>
    </recordTypes><recordTypes>
        <fullName>Faculty_Recommendation</fullName>
        <active>false</active>
        <businessProcess>CASA Case</businessProcess>
        <label>Faculty Recommendation</label>
    </recordTypes><recordTypes>
        <fullName>Student_Appeal</fullName>
        <active>false</active>
        <businessProcess>CASA Case</businessProcess>
        <description>Case type used for student appeals</description>
        <label>Student Appeal</label>
    </recordTypes><recordTypes>
        <fullName>Tutor_Request</fullName>
        <active>true</active>
        <businessProcess>LWC Case</businessProcess>
        <description>Case record type for tutor request</description>
        <label>Tutor Request</label>
    </recordTypes></CustomObject>